--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.18.2",
     "connect-flash": "^0.1.1",
     "express": "^4.15.4",
+    "express-fileupload": "^0.2.0",
     "express-messages": "^1.0.1",
     "express-session": "^1.15.6",
     "express-validator": "^4.2.1",
