--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-messages": "^1.0.1",
     "express-session": "^1.15.6",
     "express-validator": "^4.2.1",
+    "moment": "^2.19.1",
     "mongoose": "^4.11.13",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
