--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^4.11.13",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "pug": "^2.0.0-rc.3"
+    "pug": "^2.0.0-rc.3",
+    "random-number": "0.0.9"
   }
 }
